# pseudo3D_stokes

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  config.h.cmake  dune.module  pseudo3D-stokes.pc.in
appl/: .gitignore  CMakeLists.txt  doftoelementmapper.hh  genericInput.input  genericInputPeriodic.input  main.cc  problem.hh  properties.hh  runStokesGeneric.py  run_simulations.sh  run_simulations_periodic_test.sh  run_simulations_test.sh  spatialparams.hh  test_singlePrecipitate_permCheck.py
appl/references/: permeabilities_single_precipitate-reference.csv  singlePrecipitate_fiveQuarter-reference.vtu  singlePrecipitate_full-reference.vtu  singlePrecipitate_half-reference.vtu  singlePrecipitate_no-reference.vtu  singlePrecipitate_quarter-reference.vtu  singlePrecipitate_threeHalf-reference.vtu  singlePrecipitate_threeQuarter-reference.vtu
appl/test_periodic_BC/: .gitignore  ellipsePeriodic.pgm  ellipsePeriodicBrinkman.input  pipesPeriodic.pgm  pipesPeriodicBrinkman.input
appl/test_singlePrecipitate_2d_total/: .gitignore  hx_singlePrecipitate_fiveQuarter.input  hx_singlePrecipitate_fiveQuarter.pgm  hx_singlePrecipitate_full.input  hx_singlePrecipitate_full.pgm  hx_singlePrecipitate_half.input  hx_singlePrecipitate_half.pgm  hx_singlePrecipitate_no.input  hx_singlePrecipitate_no.pgm  hx_singlePrecipitate_quarter.input  hx_singlePrecipitate_quarter.pgm  hx_singlePrecipitate_threeHalf.input  hx_singlePrecipitate_threeHalf.pgm  hx_singlePrecipitate_threeQuarter.input  hx_singlePrecipitate_threeQuarter.pgm  hx_singlePrecipitate_vs1e-06_fiveQuarter.input  hx_singlePrecipitate_vs1e-06_full.input  hx_singlePrecipitate_vs1e-06_half.input  hx_singlePrecipitate_vs1e-06_no.input  hx_singlePrecipitate_vs1e-06_quarter.input  hx_singlePrecipitate_vs1e-06_threeHalf.input  hx_singlePrecipitate_vs1e-06_threeQuarter.input  lambda1_singlePrecipitate_full.txt  lambda1_singlePrecipitate_half.txt  lambda1_singlePrecipitate_no.txt  lambda1_singlePrecipitate_threeHalf.txt  lambda1_singlePrecipitate_threeQuarter.txt  lambda1_singlePrecipitate_vs1e-06_fiveQuarter.txt  lambda1_singlePrecipitate_vs1e-06_quarter.txt  lambda2_singlePrecipitate_half.txt  lambda2_singlePrecipitate_no.txt  lambda2_singlePrecipitate_threeQuarter.txt  lambda2_singlePrecipitate_vs1e-06_fiveQuarter.txt  lambda2_singlePrecipitate_vs1e-06_full.txt  lambda2_singlePrecipitate_vs1e-06_quarter.txt  lambda2_singlePrecipitate_vs1e-06_threeHalf.txt
cmake/modules/: CMakeLists.txt
doc/doxygen/: Doxylocal
dune/: CMakeLists.txt
dune/pseudo3D-stokes/: CMakeLists.txt  pseudo3D-stokes.hh
preprocessing/: .gitignore
src/: CMakeLists.txt  pseudo3D-stokes.cc
